--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
+		"@rgossiaux/svelte-headlessui": "^1.0.2",
+		"@rollup/plugin-json": "^4.1.0",
+		"@rollup/plugin-replace": "^4.0.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
+		"dotenv": "^16.0.1",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -46,5 +50,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@supabase/supabase-js": "^1.35.4"
+	}
 }
