--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,13 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"baseUrl": "./",
+		"paths": {
+			"@src/*": ["src/*"],
+			"@routes/*": ["src/routes*"],
+			"$lib":["src/lib"],
+			"$lib/*":["src/lib/*"]
+		}
 	}
 }
